--- a/src/settings/global.less
+++ b/src/settings/global.less
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url('./fonts/stylesheet.css');
+
 body {
   margin: 0;
 
@@ -12,6 +14,6 @@ body {
 
 @layer components {
   .App {
-    @apply absolute h-full w-full;
+    @apply absolute h-full w-full pt-20;
   }
 }
