--- a/src/pages/home/index.less
+++ b/src/pages/home/index.less
@@ -12,8 +12,59 @@
       @apply absolute top-0;
     }
 
+    @keyframes fadeIn {
+      0% {
+        opacity: 0;
+      }
+      100% {
+        opacity: 1;
+      }
+    }
+
     svg {
+      opacity: 0;
+      animation-name: fadeIn;
+      animation-duration: 1s;
+      animation-timing-function: ease-in-out;
+
+      animation-fill-mode: forwards;
       @apply pointer-events-none absolute left-0 top-0 hidden;
+    }
+
+    & > svg:nth-child(2) {
+      animation-delay: 0s;
+    }
+
+    & > svg:nth-child(3) {
+      animation-delay: 0.1s;
+    }
+
+    & > svg:nth-child(4) {
+      animation-delay: 0.2s;
+    }
+
+    & > svg:nth-child(5) {
+      animation-delay: 0.4s;
+    }
+
+    & > svg:nth-child(6) {
+      animation-delay: 0.5s;
+    }
+
+    & > svg:nth-child(7) {
+      animation-delay: 0.6s;
+    }
+
+    & > svg:nth-child(8) {
+      animation-delay: 0.7s;
+    }
+
+    & > svg:nth-child(9) {
+      animation-delay: 0.8s;
+    }
+
+    & > svg:nth-child(10) {
+      animation-delay: 0.9s;
     }
   }
 
