chore: Update dependencies, optimize code, and add new features

--- a/src/components/grid/index.less
+++ b/src/components/grid/index.less
@@ -1,12 +1,12 @@
 @import url('../../settings/config.less');
 
 .Grid {
-  @apply flex w-full py-10 text-sm lg:text-base;
+  @apply flex w-full select-none py-10 text-sm lg:text-base;
 
   .selected,
   .clients {
     min-width: 600px;
-    width: 60%;
+    width: 70%;
     height: fit-content;
     @apply flex;
   }
