--- a/src/components/navigation/index.less
+++ b/src/components/navigation/index.less
@@ -1,5 +1,5 @@
 .Navigation {
-  @apply fixed top-0 flex w-full items-center justify-start bg-backgroundColor text-textColor;
+  @apply fixed top-0 z-10 flex w-full select-none items-center justify-start bg-backgroundColor text-textColor;
 
   .logo {
     width: image-width(@img) * @scale;
