--- a/src/settings/fonts/stylesheet.css
+++ b/src/settings/fonts/stylesheet.css
@@ -19,3 +19,14 @@
 
   font-display: swap;
 }
+
+@font-face {
+  font-weight: 600;
+  font-style: normal;
+  font-family: 'Reddit Sans semiBold';
+  src:
+    url('./RedditSans-SemiBold.woff2') format('woff2'),
+    url('./RedditSans-SemiBold.woff') format('woff');
+
+  font-display: swap;
+}
