--- a/src/pages/project/index.less
+++ b/src/pages/project/index.less
@@ -67,6 +67,48 @@
     @apply w-full bg-cover bg-center bg-no-repeat;
   }
 
+  .iframe {
+    @apply relative flex w-full justify-center;
+
+    .shorts {
+      @apply w-full max-w-96;
+
+      & > div {
+        padding-bottom: 16/9 * 100%;
+        @apply relative w-full bg-hover;
+
+        & > div {
+          @apply absolute bottom-0 left-0 right-0 top-0 bg-cover bg-center bg-no-repeat;
+
+          iframe {
+            width: 100%;
+            height: 100%;
+            border: none;
+          }
+        }
+      }
+    }
+
+    .youtube {
+      @apply w-full bg-purple-500;
+
+      & > div {
+        padding-bottom: 9/16 * 100%;
+        @apply relative w-full bg-hover;
+
+        & > div {
+          @apply absolute bottom-0 left-0 right-0 top-0 bg-cover bg-center bg-no-repeat;
+
+          iframe {
+            width: 100%;
+            height: 100%;
+            border: none;
+          }
+        }
+      }
+    }
+  }
+
   .swiper-button-next,
   .swiper-button-prev {
     @apply h-10 w-10 text-white;
@@ -79,6 +121,22 @@
 
     &::after {
       @apply text-sm;
+    }
+  }
+
+  .table {
+    @apply w-full py-10;
+
+    .row {
+      @apply grid w-full grid-cols-4 gap-4 border-b border-black py-2 font-reddit;
+
+      & > div {
+        @apply text-left;
+      }
+    }
+
+    button {
+      @apply w-full hover:text-hover;
     }
   }
 }
