--- a/src/pages/home/recent/index.less
+++ b/src/pages/home/recent/index.less
@@ -5,10 +5,20 @@
     max-width: 100%;
     width: 800px;
 
+    @keyframes fadeIn {
+      0% {
+        opacity: 0;
+      }
+      100% {
+        opacity: 1;
+      }
+    }
+
     .img {
       padding-bottom: (unit(image-height(@img) / unit(image-width(@img))) * 100%);
       width: 100%;
       background-size: cover;
+      animation: fadeIn 1s ease-out forwards;
 
       @img: './img/tmpCover.jpg';
 
